# main.py
@@ -6,7 +6,7 @@ import quart_cors
 from quart import request
 from bs4 import BeautifulSoup
 
-from util import parse_json, remove_useless_tags
+from util import parse_json, remove_useless_tags, get_actions
 from selenium_driver import fetch_website_html_with_selenium
 from chatgpt import ask_chatgpt
 from fetch import fetch_website
@@ -29,24 +29,15 @@ def getHotelWebsite(hotel):
 
 def getBookingUrl(hotelUrl):
   print("getting booking url...")
-  # print(f'hotelUrl: {hotelUrl}')
   website_html = fetch_website(hotelUrl)
-  print(f'website_html: {website_html[:300]}')
-
   soup = BeautifulSoup(website_html, 'html.parser')
-  # The 'get_text' method removes all HTML tags and returns the text content
-  # website_text = soup.get_text()
-  # print(f'website_text is {website_text[:300]}')
-
   available_actions = get_actions(soup)
   # print(available_actions)
-
   chat_gpt_response = ask_chatgpt(
     'You have a list of urls and a description of what each url does: ' +
     str(available_actions),
     'Give me the most likely url that I can use to book. Format your response as JSON in this format: { "booking_url": "https://www.myhotel.com/book" }'
   )
-  # print(bookingUrl)
   response = parse_json(chat_gpt_response)
   if response:
     return response.get('booking_url')
@@ -54,8 +45,7 @@ def getBookingUrl(hotelUrl):
     print(f'ChatGPT failed and said: {chat_gpt_response}')
 
 
-# hotelUrl = "https://www.belvederebellagio.com/en"
-# print(getBookingUrl(hotelUrl))
+# print(getBookingUrl("https://www.belvederebellagio.com/en"))
 
 
 def getBookingForm(form_tags):
@@ -64,45 +54,39 @@ def getBookingForm(form_tags):
   formSummaries = []
   for i, form_tag in enumerate(form_tags, start=1):
     contents = str(remove_useless_tags(form_tag))
-    # print(f"Contents of form {i} are {len(contents)} chars long:")
-    # print(f'form contents: {contents[:50]}')
 
     formSummary = ask_chatgpt(
       '',
       'Without any additional context, do your best to describe what this form does. Here is the HTML for the form:'
       + contents)
     formSummaries.append(formSummary)
-    # print("form " + str(i) + ": " + formSummary[:100])
-    # print()
   bookingFormIndex = ask_chatgpt(
     '',
     'Given the descriptions of multiple forms on a hotel\'s website, which form  is most likely to be the one for booking/reserving a room at the hotel? Format your response as JSON in this format: { "bookingFormIndex": 27 } Here are the form descriptions: '
     + ",".join(formSummaries))
-  # + "\n".join([f'Form #{i}: {s}' for i, s in enumerate(formSummaries)]))
   # print(bookingFormIndex)
   i = int(parse_json(bookingFormIndex).get('bookingFormIndex'))
   return form_tags[i]
 
 
-# https://reservations.belvederebellagio.com/107984?languageid=1#/guestsandrooms
-def submitBookingForm(bookingUrl, bookingRequest):
+def getAndSubmitBookingForm(bookingUrl, bookingRequest):
   print("bookingUrl: " + bookingUrl)
   #website_html = fetch_website(bookingUrl)
   website_html = fetch_website_html_with_selenium(bookingUrl)
-
   # print(website_html[:1000])
   soup = BeautifulSoup(website_html, 'html.parser')
 
   print("looking for form tags...")
   # Find all <form> tags
   form_tags = soup.find_all('form')
-  if len(form_tags) == 0:
-    print("no form tags found")
-    return
   print(f'found {len(form_tags)} form tags')
-
-  bookingFormTag = getBookingForm(form_tags)
-  print("bookingFormTag: " + str(remove_useless_tags(bookingFormTag))[:200])
+  if len(form_tags) == 0:
+    return
+  elif len(form_tags) == 1:
+    bookingFormTag = form_tags[0]
+  else:
+    bookingFormTag = getBookingForm(form_tags)
+  # print("bookingFormTag: " + str(remove_useless_tags(bookingFormTag))[:200])
 
   javascriptCode = ask_chatgpt(
     'You are an expert at writing javascript code that performs actions on this html booking form: '
@@ -112,6 +96,7 @@ def submitBookingForm(bookingUrl, bookingRequest):
     f'\n endDate: {bookingRequest["endDate"]}' +
     f'\n numRooms: {bookingRequest["numRooms"]}' +
     f'\n numAdults: {bookingRequest["numAdults"]}' +
+    f'\n numChildren: {bookingRequest["numChildren"]}' +
     'Format your response as JSON in this format: { "javascriptCode": "console.log("my javascript")" }'
   )
   print(javascriptCode)
@@ -119,17 +104,15 @@ def submitBookingForm(bookingUrl, bookingRequest):
   return code
 
 
-bookingUrl = "https://reservations.belvederebellagio.com/107984?languageid=1"
-bookingUrl = "https://reservations.verticalbooking.com/premium/index.html?id_albergo=295&dc=111&lingua_int=ita&id_stile=16908"
-bookingUrl = 'https://reservations.laplayahotel.com/110243?adults=2&children=0&#/datesofstay'
-bookingUrl = 'https://book.webrez.com/v31/#/property/2445/location/0/search'  # The George Hotel
+bookingUrl = 'https://book.webrez.com/v31/#/property/2445/location/0/search'
 bookingRequest = {
   "startDate": "06/22/2023",
   "endDate": "06/25/2023",
   "numRooms": '3',
-  "numAdults": '6'
+  "numAdults": '6',
+  "numChildren": '0'
 }
-print(submitBookingForm(bookingUrl, bookingRequest))
+#print(getAndSubmitBookingForm(bookingUrl, bookingRequest))
 
 
 def everythingAllTogether(hotelName, bookingRequest):
@@ -138,15 +121,11 @@ def everythingAllTogether(hotelName, bookingRequest):
   print(f'hotelUrl: {hotelUrl}')
   bookingUrl = getBookingUrl(hotelUrl)
   print(f'bookingUrl: {bookingUrl}')
-  code = submitBookingForm(bookingUrl, bookingRequest)
+  code = getAndSubmitBookingForm(bookingUrl, bookingRequest)
   print(f'code: {code}')
 
 
-hotelName = "Hotel Belvedere"
-hotelName = "Mandarin Oriental Lake Como"
-hotelName = "Villa Flori Lago di como"
-hotelName = "Stanford Inn in Mendocino"
-hotelName = "La Playa Carmel"
+hotelName = "The George Hotel Montclair"
 # everythingAllTogether(hotelName, bookingRequest)
 
 
@@ -176,14 +155,21 @@ async def get_website(username):
 
 @app.post("/hotel/<string:username>")
 async def get_hotel_availability(username):
-  print(username)
+  #print(username)
   request = await quart.request.get_json(force=True)
-  url = request['url']
+  name = request['name']
+  startDate = request['startDate']
+  endDate = request['endDate']
+  numAdults = request['numAdults']
+  numRooms = request['numRooms']
 
-  bookingUrl = getBookingUrl(url)
+  print(f'got request: {request}')
+
+  code = everythingAllTogether(name, request)
+  #bookingUrl = getBookingUrl(url)
 
   return quart.Response(response=json.dumps({
-    'availability': bookingUrl,
+    'availability': code,
   }),
                         status=200,
                         content_type='application/json')
